HERE Data SDK for Java & Scala Release 2.75.5