@@ -59,6 +59,7 @@ In the commands that follow, replace the variable placeholders with the followin
 - `$CATALOG_HRN` is your output catalog's `HRN` (returned by `olp catalog create`).
 - `$HRN_PARTITION` is the platform environment you are in. The value should be `here`.
 - `$PROJECT_HRN` is your project's `HRN` (returned by `olp project create` command).
+- `$OLP_EMAIL` is a single contact e-mail address for the pipeline.
 - `$REALM` The ID of your organization, also called a realm. Consult your platform
   invitation letter to learn your organization ID.
 - `$CATALOG_RIB` is the HRN of the public _HERE Map Content_ catalog in your pipeline configuration ([HERE environment](./config/here/pipeline-config.conf).
@@ -138,6 +139,8 @@ example, we use a bounding box around the cities of Berlin. You can edit the bou
 partition of HERE Map Content. Make sure you update the layer coverage to reflect the different
 geographical region. In order to use this configuration file, you need to use the `-Dconfig.file`
 parameter.
+
+The [`.jvmopts`](.jvmopts) file contains `--add-opens` options required to run Spark applications with Java 17.
 
 Finally, run the following command line in the `heremapcontent-validation` directory to compile and
 run the validation pipeline.
@@ -311,8 +314,8 @@ partition of HERE Map Content. Make sure you update the layer coverage to reflec
 geographical region.
 
 ```bash
-olp pipeline create $COMPONENT_NAME_Pipeline --scope $PROJECT_HRN
-olp pipeline template create $COMPONENT_NAME_Template batch-4.0 $PATH_TO_JAR \
+olp pipeline create $COMPONENT_NAME_Pipeline --email $OLP_EMAIL --scope $PROJECT_HRN
+olp pipeline template create $COMPONENT_NAME_Template batch-4.1 $PATH_TO_JAR \
                 com.here.platform.data.processing.example.scala.validation.Main \
                 --workers=4 --worker-units=3 --supervisor-units=2 --input-catalog-ids=hmc \
                 --scope $PROJECT_HRN
