@@ -32,6 +32,7 @@ In the commands that follow, replace the variable placeholders with the followin
 - `$CATALOG_HRN` is your output catalog's `HRN` (returned by the `olp catalog create` command).
 - `$HRN_PARTITION` is the platform environment you are in. The value should be `here`.
 - `$PROJECT_HRN` is your project's `HRN` (returned by the `olp project create` command).
+- `$OLP_EMAIL` is a single contact e-mail address for the pipeline.
 - `$REALM` is the ID of your organization, also called a realm. Consult your platform
   invitation letter to learn your organization ID.
 - `$CATALOG_RIB` is the HRN of the public _HERE Map Content_ catalog in your pipeline configuration ([HERE environment](./compiler/config/here/pipeline-config.conf).
@@ -130,6 +131,8 @@ geographical region. In order to use this configuration file, you need to use th
 parameter.
 
 Set the environment variable `$PATH_TO_CONFIG_FOLDER` to [`./config/here`](compiler/config/here).
+
+The [`.jvmopts`](./compiler/.jvmopts) file contains `--add-opens` options required to run Spark applications with Java 17.
 
 Finally, run the following command line in the [`pedestrian-topologies-extraction-protobuf/compiler`](../pedestrian-topologies-extraction-protobuf/compiler) directory
 to run the Pedestrian Topologies Compiler.
@@ -280,8 +283,8 @@ partition of HERE Map Content. Make sure you update the layer coverage to reflec
 geographical region.
 
 ```bash
-olp pipeline create $COMPONENT_NAME_Pipeline --scope $PROJECT_HRN
-olp pipeline template create $COMPONENT_NAME_Template batch-4.0 $PATH_TO_JAR \
+olp pipeline create $COMPONENT_NAME_Pipeline --email $OLP_EMAIL --scope $PROJECT_HRN
+olp pipeline template create $COMPONENT_NAME_Template batch-4.1 $PATH_TO_JAR \
                 com.here.platform.data.processing.example.scala.pedestrian.protobuf.Main \
                 --workers=4 --worker-units=3 --supervisor-units=2 --input-catalog-ids=rib \
                 --scope $PROJECT_HRN
